integrate coin market cap
